--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0",
-    "xmldom": "^0.6.0",
+    "@xmldom/xmldom": "^0.7.5",
     "xpath": "^0.0.32"
   },
   "name": "main",
