--- a/scripts/main/tsconfig.json
+++ b/scripts/main/tsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "node",
     "types": ["lua-types/5.4", "typescript-to-lua/language-extensions"],
     "strict": true,
-    "declaration": false,
+    "declaration": true,
     "outDir": "./dist"
   },
   "tstl": {
