--- a/scripts/main/tsconfig.json
+++ b/scripts/main/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "$schema": "https://raw.githubusercontent.com/TypeScriptToLua/vscode-typescript-to-lua/master/tsconfig-schema.json",
   "compilerOptions": {
+    "jsx": "react",
+    "jsxFactory": "LunaX.createElement",
     "forceConsistentCasingInFileNames": true,
     "removeComments": true,
     "importHelpers": true,
