--- a/scripts/luna-base/.eslintrc.json
+++ b/scripts/luna-base/.eslintrc.json
@@ -2,12 +2,26 @@
   "env": {
     "es2021": true
   },
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:import/typescript"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest"
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "import"],
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true // always try to resolve types under `<root>@types` directory even it doesn't contain any source code, like `@types/unist`
+      }
+    }
+  },
   "rules": {
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-empty-interface": "off",
@@ -15,7 +29,8 @@
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
     "no-unused-vars": "warn",
-    "sort-imports": "error",
+    "sort-imports": "off",
+    "import/order": ["error", { "alphabetize": { "order": "asc" } }],
     "no-duplicate-imports": "error",
     "semi": ["error", "always"]
   }
