--- a/scripts/luna-base/package.json
+++ b/scripts/luna-base/package.json
@@ -12,6 +12,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "lua-types": "^2.11.0",
