--- a/scripts/luna-base/package.json
+++ b/scripts/luna-base/package.json
@@ -15,6 +15,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
+    "prettier": "^2.5.1",
     "lua-types": "^2.11.0",
     "main": "1.0.0",
     "typescript": "^4.4.4",
@@ -27,6 +28,7 @@
     "build:test": "cd ./tests && tstl -p ./tsconfig.json",
     "test": "cd ./tests && ../../../build/main ./index.lua",
     "lint": "eslint ./src",
-    "lint:fix": "eslint --fix ./src"
+    "lint:fix": "eslint --fix ./src",
+    "format": "prettier --write ./src"
   }
 }
