--- a/scripts/luna-base/package.json
+++ b/scripts/luna-base/package.json
@@ -17,12 +17,14 @@
     "eslint-plugin-import": "^2.25.4",
     "prettier": "^2.5.1",
     "lua-types": "^2.11.0",
+    "rimraf": "^3.0.2",
     "typescript": "^4.4.4",
     "typescript-to-lua": "^1.0.1"
   },
   "scripts": {
     "build": "tstl -p ./tsconfig.json",
     "watch": "tstl -p ./tsconfig.json --watch",
+    "clean": "rimraf -f ./dist",
     "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src",
     "ts:check": "tsc --noEmit",
