--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,8 @@
     "typeinfo": "cpp",
     "xiosbase": "cpp",
     "xstring": "cpp",
-    "cstdint": "cpp"
+    "cstdint": "cpp",
+    "*.rh": "c"
   },
   "cSpell.words": [],
   "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
