--- a/scripts/luna-base/package.json
+++ b/scripts/luna-base/package.json
@@ -18,8 +18,8 @@
     "prettier": "^2.5.1",
     "lua-types": "^2.11.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.4.4",
-    "typescript-to-lua": "^1.0.1"
+    "typescript": "4.6.2",
+    "typescript-to-lua": "^1.4.4"
   },
   "scripts": {
     "build": "tstl -p ./tsconfig.json",
