--- a/scripts/main/package.json
+++ b/scripts/main/package.json
@@ -6,8 +6,8 @@
   "devDependencies": {
     "luna-base": "^1.0.0",
     "lua-types": "^2.11.0",
-    "typescript": "^4.4.4",
-    "typescript-to-lua": "^1.0.1"
+    "typescript": "4.6.2",
+    "typescript-to-lua": "^1.4.4"
   },
   "scripts": {
     "build": "tstl",
